Fix accessibility contrast issues

--- a/styles/markdown.css
+++ b/styles/markdown.css
@@ -74,7 +74,7 @@ h3 a > svg {
 
 html.dark .rehype-code-title {
   background-color: #475569;
-  color: #adbac7;
+  color: #cbd5e1;
 }
 
 .rehype-code-title + pre {
